--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -10,36 +10,11 @@
     <LinearLayout
         android:id="@+id/lyControl"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="400dp"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/lyInstallTime"
         app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/vCheckPack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="2dp"
-                android:text="Check Pack"
-                android:textColor="@color/white"
-                android:textSize="15dp" />
-
-            <Button
-                android:id="@+id/vDownload"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="2dp"
-                android:layout_marginStart="2dp"
-                android:text="Download"
-                android:textColor="@color/white"
-                android:textSize="15dp" />
-        </LinearLayout>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -52,34 +27,11 @@
                 android:layout_height="1dp"
                 android:background="@color/white" />
 
-            <TextView
-                android:id="@+id/vPackStatus"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:gravity="bottom"
-                android:layout_weight="1"
-                android:padding="5dp"
-                android:scrollbars="vertical"
-                android:text="Pack Status"
-                android:textColor="@color/white"
-                android:textSize="10dp" />
-
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/white" />
 
-            <TextView
-                android:id="@+id/vDownloadStatus"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:gravity="bottom"
-                android:layout_weight="1"
-                android:padding="5dp"
-                android:scrollbars="vertical"
-                android:text="Download Status"
-                android:textColor="@color/white"
-                android:textSize="10dp" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -90,7 +42,7 @@
         android:id="@+id/lyLocal"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/lyFastFollow"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/lyInstallTime"
         app:layout_constraintTop_toBottomOf="@+id/lyControl">
@@ -105,7 +57,7 @@
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:text="Local Asset"
-            android:textColor="@color/white"
+            android:textColor="@color/purple_200"
             android:textSize="25dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -116,7 +68,7 @@
         android:id="@+id/lyInstallTime"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/lyOnDemand"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/lyLocal"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lyControl">
@@ -131,61 +83,11 @@
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:text="Install Time"
-            android:textColor="@color/white"
+            android:textColor="@color/purple_200"
             android:textSize="25dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/lyFastFollow"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/lyOnDemand"
-        app:layout_constraintTop_toBottomOf="@+id/lyLocal">
 
-        <com.google.android.exoplayer2.ui.PlayerView
-            android:id="@+id/vFastFollow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="Fast Follow"
-            android:textColor="@color/white"
-            android:textSize="25dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/lyOnDemand"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/lyFastFollow"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lyInstallTime">
-
-        <com.google.android.exoplayer2.ui.PlayerView
-            android:id="@+id/vOnDemand"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/vOnDemandText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="On Demand"
-            android:textColor="@color/white"
-            android:textSize="25dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
